--- a/Barbearia Estética/Views/Home/Index.cshtml
+++ b/Barbearia Estética/Views/Home/Index.cshtml
@@ -174,11 +174,11 @@
             <div class="dropdown" style="position: relative; display: inline-block;">
                 <span style="display: flex; align-items: center; margin-right: 20px;">
                     <i class="fa fa-user" aria-hidden="true" style="margin-right: 8px; color: #725f47;"></i>
-                    <a href="Login.html" style="margin-left: 10px;">Login</a>
+                    <a href="/Usuario/Login" style="margin-left: 10px;">Login</a>
                 </span>
                 <div class="dropdown-content"
                     style="display: none; position: absolute; background-color: white; width: 200px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1; padding: 8px; border-radius: 3%;">
-                    <a href="UsuarioIndex.html"
+                    <a href="/Usuario/Index"
                         style="padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
                         <i class="fa fa-users" aria-hidden="true" style="margin-right: 8px; color: #725f47;"></i>
                         Usuarios
@@ -329,32 +329,30 @@
             <div class="skills">
                 <div class="skill-item item1">
                     <div class="box">
-                        <h3>temos habilidade em criar estilos personalizados para homens.<span> 100% </span> </h3>
+                        <h2>temos habilidade em criar estilos personalizados para homens.<span> 100% </span> </h2>
                         <div class="progress-bar"> <span></span> </div>
                     </div>
                     <div class="box">
-                        <h3>Temos competência em realizar cortes clássicos e modernos.<span> 100% </span> </h3>
+                        <h2>Temos competência em realizar cortes clássicos e modernos.<span> 100% </span> </h2>
                         <div class="progress-bar"> <span></span> </div>
                     </div>
                     <div class="box">
-                        <h3>Temos especialização em várias técnicas de coloração.<span> 100% </span> </h3>
+                        <h2>Temos especialização em várias técnicas de coloração.<span> 100% </span> </h2>
                         <div class="progress-bar"> <span></span> </div>
                     </div>
                 </div>
 
                 <div class="skill-item item2">
                     <div class="box">
-                        <h3>Temos uma modelagem e cuidados específicos para cada tipo de barba e bigode.<span> 100%
-                            </span> </h3>
+                        <h2>Temos uma modelagem e cuidados específicos para cada tipo de barba e bigode.<span> 100% </span> </h2>
                         <div class="progress-bar"> <span></span> </div>
                     </div>
                     <div class="box">
-                        <h3>Temos um serviço rápido e eficiente para homens ocupados.<span> 100% </span> </h3>
+                        <h2>Temos um serviço rápido e eficiente para homens ocupados.<span> 100% </span> </h2>
                         <div class="progress-bar"> <span></span> </div>
                     </div>
                     <div class="box">
-                        <h3>Temos soluções abrangentes para manter ou inovar a aparência dos clientes.<span> 100%
-                            </span> </h3>
+                        <h2>Temos soluções abrangentes para manter ou inovar a aparência dos clientes.<span> 100% </span> </h2>
                         <div class="progress-bar"> <span></span> </div>
                     </div>
                 </div>
@@ -480,11 +478,9 @@
                     <br> Cortes e penteados
                 </h3>
                 <p>
-                    Elevamos o seu estilo a um novo patamar, <br>
-                    seu visual com cortes e penteados exclusivos, <br>
-                    Modernos ou clássicos, nossos cortes são adaptados ao estilo pessoal de cada cliente. <br>
-                    nossos profissionais altamente qualificados criam looks exclusivos e recriam tendências <br>
-                    pensados para destacar sua personalidade e estilo único.
+                    Elevamos o seu estilo a um novo patamar,seu visual com cortes e penteados exclusivos,
+                    Modernos ou clássicos, nossos cortes são adaptados ao estilo pessoal de cada cliente.
+                    nossos profissionais altamente qualificados designes pensados para destacar sua personalidade.
                 </p>
             </div>
             <br>
@@ -495,9 +491,8 @@
                 </h3>
                 <p>
 
-                    Rápidos, eficientes e de alta qualidade, <br>
-                    Ideal para quem busca um visual impecável. <br>
-                    Nossos barbeiros são especialistas em diversas técnicas, garantindo um corte perfeito. <br>
+                    Rápidos, eficientes e de alta qualidade, Ideal para quem busca um visual impecável.
+                    Nossos barbeiros são especialistas em diversas técnicas, garantindo um corte perfeito.
                     Oferecemos um acabamento memorável que combina praticidade e sofisticação.
                 </p>
             </div>
@@ -508,11 +503,9 @@
                     <br>com estilo ou padrão
                 </h3>
                 <p>
-                    nosso acabamento é duradouro e deslumbrante.<br>
-                    Transforme seu visual com nossa coloração adaptada ao seu estilo pessoal. <br>
+                    nosso acabamento é duradouro e deslumbrante. Transforme seu visual com nossa coloração
                     oferecemos com excelência cores vibrantes e naturais, perfeitas para qualquer ocasião.
-                    Com técnicas avançadas e resultados impecáveis, <br>
-                    garantimos um visual marcante e sofisticado. <br>
+                    Com técnicas avançadas e resultados impecáveis, garantimos um visual marcante e sofisticado. 
 
                 </p>
             </div>
@@ -523,10 +516,9 @@
                     <br>corte, realce e coloração,
                 </h3>
                 <p>
-                    Aprimore sua aparência com nosso serviço completo de barba e bigode. <br>
-                    Do corte à tonalização, proporcionamos um visual impecável e marcante. <br>
-                    Com técnicas especializadas e produtos de qualidade, <br>
-                    garantimos um acabamento que realça sua masculinidade com estilo e sofisticação.
+                    Aprimore sua aparência com nosso serviço completo de barba e bigode. Com estilo e sofisticação.
+                    Do corte à tonalização, proporcionamos um visual impecável e marcante. 
+                    Com técnicas especializadas e produtos de alta qualidade. 
                 </p>
             </div>
 
@@ -536,9 +528,8 @@
                     <br>Na máquina e navalha,
                 </h3>
                 <p>
-                    Para quem busca praticidade e precisão, oferecemos o serviço de barba expressa. <br>
-                    Com cortes detalhados na máquina e acabamento preciso na navalha, <br>
-                    proporcionamos um visual definido e elegante em pouco tempo. <br>
+                    Para quem busca praticidade e precisão, oferecemos o serviço de barba expressa. 
+                    Com cortes detalhados na máquina e acabamento preciso na navalha.
                     Ideal para quem valoriza um cuidado rápido sem abrir mão da qualidade.
                 </p>
             </div>
@@ -549,10 +540,9 @@
                     <br>o cliente vem toda semana, mas só paga uma vez ao mês!
                 </h3>
                 <p>
-                    Economize tempo e dinheiro com nosso pacote de manutenção mensal. <br>
-                    Visite-nos toda semana para cuidar da sua aparência e pague apenas uma vez ao mês. <br>
-                    Com tratamentos personalizados e atendimento de excelência, <br>
-                    garantimos que você esteja sempre impecável, sem preocupações extras.
+                    Economize tempo e dinheiro com nosso pacote de manutenção mensal. 
+                    Visite-nos toda semana para cuidar da sua aparência e pague apenas uma vez ao mês.
+                    Garantimos que você esteja sempre impecável, sem preocupações extras.
                 </p>
             </div>
 
@@ -661,14 +651,8 @@
                     <i class="fas fa-quote-left"></i>
 
                     <p class="comment">
-                        “A atenção, o profissionalismo e o talento superaram todas as minhas expectativas.
-                        Um <strong>designer de cabelos masculino</strong> excepcional.
-                        A Barbearia Estética demonstrou uma habilidade descomunal ao criar um corte personalizado que
-                        realçou meus traços faciais.
-                        A experiência na Barbearia Estética não apenas transformou meu visual, mas também me fez sentir
-                        como um verdadeiro cavalheiro.”
-                        Recebi inúmeros elogios, me senti renovado e confiante. E sobretudo com uma aparência sempre
-                        impecável.”
+                        "Um designer de cabelos masculino excepcional. me senti renovado e 
+                        confiante. E sobretudo com uma aparência sempre impecável.”
                     </p>
 
                     <div class="intro">
@@ -683,14 +667,8 @@
                     <i class="fas fa-quote-left"></i>
 
                     <p class="comment">
-                        “O meu é um <strong>corte de cabelo padrão</strong>, mas realmente me impressionou a atenção
-                        dada aos detalhes.
-                        O cabeleireiro João tem um olhar artístico único e uma habilidade incrível de entender
-                        exatamente o que seus clientes querem,
-                        mesmo quando eles próprios não sabem explicar. Ele sugeriu um estilo que não só combinava com o
-                        formato do meu rosto,
-                        mas também realçava minha personalidade e estilo de vida.
-                        O resultado final foi simplesmente incrível.”
+                        “O meu é um corte de cabelo padrão, mas me impressionou a atenção dada aos detalhes.
+                        realçava minha personalidade e estilo de vida.”
                     </p>
 
                     <div class="intro">
@@ -705,13 +683,8 @@
                     <i class="fas fa-quote-left"></i>
 
                     <p class="comment">
-                        “o cabeleireiro João me sugeriu um <strong>estilo de barba e bigode</strong> que combina com a
-                        minha personalidade e o meu padrão de vida.
-                        Durante o corte, usou técnicas modernas e precisas, explicando cada passo do processo
-                        e oferecendo dicas valiosas sobre o cabelo da minha barba, para mantê-lo saudável e estiloso.
-                        Recomendo o serviço da barbearia Estética a qualquer homem que procura não apenas um corte de
-                        cabelo,
-                        mas uma verdadeira transformação de estilo.”
+                        “um estilo de barba e bigode que combina com a minha personalidade. 
+                        a qualquer homem que procura não apenas um corte de cabelo."
                     </p>
 
                     <div class="intro">
@@ -726,12 +699,8 @@
                     <i class="fas fa-quote-left"></i>
 
                     <p class="comment">
-                        "Em apenas minutos, com o serviço de <strong>barba expressa</strong>,
-                        transformaram a aparência da minha barba, deslocada em uma top,
-                        com uma combinação perfeita de máquina e navalha. Me impressionou a personalização.
-                        Mesmo em um tempo curto, A Ana conseguiu personalizar o estilo da barba.
-                        Ideal para quem busca uma transformação rápida e elegante sem comprometer a qualidade.
-                        Recomendo fortemente a qualquer homem que deseje uma barba impecável em pouco tempo."
+                        "Em apenas minutos, com o serviço de barba expressa,
+                        com uma combinação perfeita de máquina e navalha."
                     </p>
 
                     <div class="intro">
@@ -747,14 +716,9 @@
                     <i class="fas fa-quote-left"></i>
 
                     <p class="comment">
-                        "Busquei inovação na Coloração de Cabelo com estilo ou padrão, mas me surpreende com tamanha
-                        eficiência.
-                        Mestres em estilização.
-                        Saí da barbearia me sentindo renovado e confiante, recebendo elogios de todos ao meu redor.
-                        Com cortes precisos, realces bem-feitos e com a coloração sofisticada e impecável
-                        a Barbearia Estética é capaz de transformar completamente a aparência de qualquer um.
-                        Sem dúvida, São verdadeiros artistas na estilização.""
-
+                        "Adorei o serviço da barbearia Estética
+                        Busquei inovação na Coloração de Cabelo com estilo, mas me surpreende." 
+                       
                     </p>
 
                     <div class="intro">
@@ -769,12 +733,8 @@
                     <i class="fas fa-quote-left"></i>
 
                     <p class="comment">
-                        "A conveniência de pagar uma única vez por mês é insuperável, e a qualidade do serviço é
-                        excepcional.
-                        Para o meu trabalho como influenciador digital, minha imagem é fundamental, e o <strong>Pacote
-                            de Manutenção Mensal</strong>" da Barbearia Estética tem sido uma verdadeira bênção.
-                        Com minha agenda abarrotada de eventos, eu não tenho tempo para agendamentos frequentes.
-                        Recomendo grandemente a qualquer homem que queira manter seu status em alta. A paz!"
+                        "Adorei o serviço da barbearia e a qualidade do serviço é excepcional.
+                        o Pacote de Manutenção Mensal tem sido uma verdadeira bênção. A paz!"
 
                     </p>
 
@@ -815,7 +775,7 @@
                             <h5><i class="fas fa-calendar-alt"></i><span>1st jan, 2022</span></h5>
                             <h5><i class="fas fa-user"></i><span>by admin</span></h5>
                         </div>
-                        <a class="main-heading" href="#">Conheça os principais nomes de cortes <br> de cabelo masculino</a>
+                        <a class="main-heading" href="#">Conheça os principais nomes de cortes de cabelo masculino</a>
                             <a href="https://blog.lavibora.com.br/nomes-de-cortes-de-cabelo/" class="btn"
                                 target="_blank">Saiba mais <i class="fas fa-arrow-right"></i></a>
 
@@ -831,8 +791,7 @@
                             <h5><i class="fas fa-calendar-alt"></i><span>1st jan, 2022</span></h5>
                             <h5><i class="fas fa-user"></i><span>by admin</span></h5>
                         </div>
-                        <a class="main-heading" href="#">Qual é o padrão de corte de cabelo <br> para militar
-                            brasileiro?</a>
+                        <a class="main-heading" href="#">Qual é o padrão de corte de cabelo para militar no brasil?</a>
                             <a href="https://www.portalinsights.com.br/perguntas-frequentes/qual-padrao-do-corte-militar"
                                 class="btn" target="_blank">Saiba mais <i class="fas fa-arrow-right"></i></a>
                     </div>
@@ -847,8 +806,7 @@
                             <h5><i class="fas fa-calendar-alt"></i><span>1st jan, 2022</span></h5>
                             <h5><i class="fas fa-user"></i><span>by admin</span></h5>
                         </div>
-                        <a class="main-heading" href="#">Vaidade: homens descobrem o poder da barba na revolução da
-                            imagem</a>
+                        <a class="main-heading" href="#">Vaidade: homens descobrem o poder da barba</a>
                         <p>
                         </p>
                         <a href="https://www.em.com.br/app/noticia/empresas/2021/08/04/interna-empresas,1292842/vaidade-homens-descobrem-o-poder-da-barba-na-revolucao-da-imagem.shtml"
@@ -865,8 +823,7 @@
                             <h5><i class="fas fa-calendar-alt"></i><span>1st jan, 2022</span></h5>
                             <h5><i class="fas fa-user"></i><span>by admin</span></h5>
                         </div>
-                        <a class="main-heading" href="#">Barba Lenhador: <br> Tudo o que você Precisa Saber e com
-                            Estilo</a>
+                        <a class="main-heading" href="#">Barba Lenhador: Tudo o que você Precisa Saber</a>
                         <p>
                         </p>
                         <a href="https://blog.daazcavernas.com/barba-lenhador/" class="btn" target="_blank">Saiba mais
@@ -900,7 +857,7 @@
                             <h5><i class="fas fa-calendar-alt"></i><span>1st jan, 2022</span></h5>
                             <h5><i class="fas fa-user"></i><span>by admin</span></h5>
                         </div>
-                        <a class="main-heading" href="#">Barbearia por assinatura: <br> como é e quais as vantagens</a>
+                        <a class="main-heading" href="#"> Barbearia por assinatura: como é e quais as vantagens </a>
                         <p>
                         </p>
                         <a href="https://blog.vindi.com.br/assinatura-em-barbearias/" class="btn" target="_blank">Saiba
@@ -1013,9 +970,10 @@
 
     <!-- JQuery -->
     <script src="~/vendors/jquery/jquery-3.6.0.js"></script>
+    
     <!-- SWIPER JS -->
     <script src="~/vendors/swiper/swiper.js"></script>
-    <!-- Magnific-Popup JS -->
+    <!-- Magnific-Popup JS -->    
     <script src="~/vendors/magnific-popup/jquery.magnific-popup.js"></script>
     <!-- Typed JS -->
     <script src="~/vendors/typed/typed.js"></script>
