--- a/Barbearia Estética/Views/Home/Index.cshtml
+++ b/Barbearia Estética/Views/Home/Index.cshtml
@@ -92,7 +92,7 @@
         <!-- Logo -->
         <a class="logo" href="#home" style="display: flex; align-items: center; text-decoration: none;">
             <img src="~/images/Home/Home.jpeg" alt="home" style="width: 50px; height: 50px; margin-right: 10px;">
-            <h2>Barbearia Estética<br>no auge da beleza!</h2>
+            <h1>Barbearia Estética<br>no auge da beleza!</h1>
         </a>
 
         <!-- Logo End -->
@@ -152,17 +152,17 @@
                     </a>
                     <a href="/Agendamento/AgendamentoUsuario/"
                        style="padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
-                        <i class="fa fa-calendar" aria-hidden="true" style="margin-right: 8px; color: #725f47;;"></i>
+                        <i class="fa fa-calendar" aria-hidden="true" style="margin-right: 8px; color: #725f47;"></i>
                         Agendamento Usuario
                     </a>
                     <a href="/Agendamento/CadastroAgendamento"
                        style="padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
-                        <i class="fa fa-user-plus" aria-hidden="true" style="margin-right: 8px; color: #725f47;;"></i>
+                        <i class="fa fa-user-plus" aria-hidden="true" style="margin-right: 8px; color: #725f47;"></i>
                         Cadastro Agendamento
                     </a>
                     <a href="/Servico/Index"
                        style="padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
-                        <i class="fa fa-user-plus" aria-hidden="true" style="margin-right: 8px; color: #725f47;;"></i>
+                        <i class="fa fa-user-plus" aria-hidden="true" style="margin-right: 8px; color: #725f47;"></i>
                         Serviços
                     </a>
                     <a href="#logout"
@@ -187,8 +187,7 @@
 
             <div class="content">
                 <div class="text">
-                    <h2>
-                        Olá, nós somos a Estética</h1>
+                    <h1> Olá, nós somos a Estética</h1>
                         <h1>E temos a oferecer: <br> <span class="typing-text"></span></h1>
                         <p>
                             Transformamos o seu visual com excelência e estilo,
@@ -1000,8 +999,8 @@
     <script>
         var typed = new Typed('.typing-text', {
 
-            strings: ['Designer de cabelos masculino: com cortes ou penteados', 'Corte de Cabelo padrão: máquina ou tesoura', 'Coloração de Cabelo: com estilo ou padrão',
-                'Barba e Bigode: corte, realce e tonalisação', 'Barba Expressa: na máquina e na navalha', 'Pacote de Manutenção Mensal: o cliente vem toda semana mas só paga uma vez ao mês!'],
+            strings: ['Designer de cabelos masculino', 'Corte de Cabelo padrão', 'Coloração de Cabelo',
+                'Barba e Bigode', 'Barba Expressa', 'Pacote de Manutenção Mensal'],
             typeSpeed: 120,
             loop: true
         });
