--- a/Barbearia Estética/Views/Agendamento/AgendamentoUsuario.cshtml
+++ b/Barbearia Estética/Views/Agendamento/AgendamentoUsuario.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Barbearia Estética</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
