--- a/Barbearia Estética/wwwroot/css/main.css
+++ b/Barbearia Estética/wwwroot/css/main.css
@@ -258,8 +258,8 @@ header #menu-btn:hover{
 }
 
 .home .image img{
-    height: 40rem;
-    width: 40rem;
+    height: 40px;
+    width: 40px;
     border-radius: 50% 50% 50% 50% / 30% 30% 70% 70% ;
     object-fit:cover;
 }
