--- a/Barbearia Estética/Views/Servico/Index.cshtml
+++ b/Barbearia Estética/Views/Servico/Index.cshtml
@@ -153,14 +153,14 @@
                         <form>
                             <div class="mb-3">
                                 <label for="nome">Nome do serviço</label>
-                                <input type="serviço" id="Excserviço" class="form-control" placeholder="Digite o nome do serviço"
+                                <input type="text" id="Excserviço" class="form-control" placeholder="Digite o nome do serviço"
                                        readonly>
 
                             </div>
 
                             <div class="mb-3">
                                 <label for="ValorServiço">valor do serviço</label>
-                                <input type="serviço" id="Excserviço" class="form-control" placeholder="Digite o valor do serviço"
+                                <input type="text" id="Excserviço" class="form-control" placeholder="Digite o valor do serviço"
                                        readonly>
 
                             </div>
