--- a/Barbearia Estética/wwwroot/css/main.css
+++ b/Barbearia Estética/wwwroot/css/main.css
@@ -257,12 +257,13 @@ header #menu-btn:hover{
 
 }
 
-.home .image img{
-    height: 40px;
-    width: 40px;
-    border-radius: 50% 50% 50% 50% / 30% 30% 70% 70% ;
-    object-fit:cover;
-}
+    .home .image img {
+        height: 100px;
+        width: 100px;
+        border-radius: 50% 50% 50% 50% / 30% 30% 70% 70%;
+        object-fit: cover;
+        border: 2px solid black;
+    }
 
 .home .content{
     -webkit-box-flex: 1;
