--- a/Barbearia Estética/Views/Shared/_LayoutGereciamento.cshtml
+++ b/Barbearia Estética/Views/Shared/_LayoutGereciamento.cshtml
@@ -1,26 +1,23 @@
-﻿
-<!DOCTYPE html>
-<html lang="pt-br">
+﻿<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Title -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Estética</title>
-    <!-- Inclusão da biblioteca Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
-    <!-- Swiper CSS -->
-    <link rel="stylesheet" href="~/vendors/swiper/swiper.css" />
-
-    <!-- Magnific-Popup CSS -->
-    <link rel="stylesheet" href="~/vendors/magnific-popup/magnific-popup.css" />
-
-    <!-- Custom Stylesheets -->
-    <link rel="stylesheet" href="~/css/main.css" />    
-    <link rel="stylesheet" href="~/css/responsive.css" />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="~/lib/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="~/lib/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="~/css/index.css">
 
 
-</head>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+
+</head>>
 <body>
 
 
@@ -44,23 +41,7 @@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <!-- Typed JS -->
-    <script src="~/vendors/typed/typed.js"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/swiper/swiper-bundle.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Magnific-Popup JS -->
-    <script src="~/vendors/magnific-popup/jquery.magnific-popup.js"></script>
-    <!-- SWIPER JS -->
-    <script src="~/vendors/swiper/swiper.js"></script>
-
-    <!-- Magnific-Popup JS -->
-    <script src="~/vendors/magnific-popup/jquery.magnific-popup.js"></script>
-    <!-- Custom Script File -->
-    <script src="~/js/script.js"></script>
-    <script src="~/js/scroll-spy.js"></script>
-    <script src="~/js/counter-up.js"></script>
-    <script src="~/js/portfolio.js"></script>
-    <script src="~/js/testi-slider.js"></script>
-    <script src="~/js/blog-slider.js"></script>
 </body>
 </html>
