--- a/Barbearia Estética/Views/Usuario/Index.cshtml
+++ b/Barbearia Estética/Views/Usuario/Index.cshtml
@@ -1,24 +1,6 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbearia Estética</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-
-    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/lib/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="~/lib/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="~/lib/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="~/css/index.css">
-    
-
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-
-</head>
-
+﻿@{
+    Layout = "~/Views/Shared/_LayoutGereciamento.cshtml";
+}
 <body>
 
     <section class="maneger-page-section">
@@ -300,11 +282,7 @@
         </div>
                
 
-        <script src="~/lib/swiper/swiper-bundle.min.js"></script>
-
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+       
         <script>
 
             function definirEdt(id, Nome, Email, Senha, TipoUsuario, Telefone) {
@@ -513,5 +491,3 @@
     </section>
 
 </body>
-
-</html>
