--- a/Barbearia Estética/Views/Agendamento/AgendamentoUsuario.cshtml
+++ b/Barbearia Estética/Views/Agendamento/AgendamentoUsuario.cshtml
@@ -1,23 +1,6 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbearia Estética</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-
-    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/lib/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="~/lib/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="~/lib/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="~/css/index.css">
-
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-
-</head>
-
+﻿@{
+    Layout = "~/Views/Shared/_LayoutGereciamento.cshtml";
+}
 <body>
 
     <section class="maneger-page-section">
@@ -371,18 +354,6 @@
             </div>
         </div>
 
-
-        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
-        <script src="~/lib/swiper/swiper-bundle.min.js"></script>
-
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-
     </section>
 
 </body>
-
-</html>
